crates/doodle-core/tests/snapshots/broken_syntax__44_newline_in_interpolation.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[unterminated-interpolation]: an interpolation can't span lines — close it with `}`
  --> 44-newline-in-interpolation.doodle:1:7
1 | show("{score
  |       ^^^^^^

error[unterminated-string]: this string is never closed
  --> 44-newline-in-interpolation.doodle:2:1
2 | ")
  | ^^

error[syntax-error]: expected `)` to close this call
  --> 44-newline-in-interpolation.doodle:1:5
1 | show("{score
  |     ^
